# SPLN2023

./: .gitignore
TP1/: medicina2.xml  medicina_resultado.json  pyproject.toml  readme.md  resultado.json  vocabulario-medicina.py
TP1/bookscraper/: __init__.py  abel.txt  author.py  book.py  books.json  cazzio.txt  coraline.txt  review.py  utils.py
TP1/bookscraper/test/: test.txt  test4.html  teste.html  teste.txt  teste2.html  teste3.html  teste5.html
TP1/goodreadsscraper/: __init__.py  author.py  book.py  books.json  review.py  utils.py
TP1/goodreadsscraper/test/: debug.html
TP1/reviewanalyser/: __init__.py
TP1/reviewanalyser/model/: tv_layer.pkl
TP2/: dicionario_global_medicina.txt  (+10 more)
TP2/tool_server/: config_server.txt  pyproject.toml
TP2/tool_server/tool_server/: __init__.py  config_server.txt  utils.py
TP2/tool_server/tool_server/model/: package.json
TP2/tool_server/tool_server/model/routes/: index.js
TP2/tool_server/tool_server/model/views/: requests.pug
TP2/tool_server/tool_server/model/workers/: command_process.js  process_command.js  request_listener.js
TP2/tool_server/tool_server/utils/: config_parser.py  config_server.py  utils.py
TP2/tool_server/tool_server_generator/: __init__.py  config_server.txt
TP2/tool_server/tool_server_generator/examples/: config_server.json
TP2/tool_server/tool_server_generator/model/public/javascripts/: jquery.js  requests.js
TP2/tool_server/tool_server_generator/model/routes/: index.js
TP2/tool_server/tool_server_generator/model/views/: layout.pug  requests.pug
TP2/tool_server/tool_server_generator/model/workers/: process_command.js  request_listener.js
TP2/tool_server/tool_server_generator/utils/: config_parser.py  config_server.py  utils.py
TPC5/tokenizerspln/: pyproject.toml
TPC5/tokenizerspln/tokenizerspln/: __init__.py
TPC5/tokenizerspln/tokenizerspln/conf/: chapter_delim.txt
(+47 files in other folders)
