[build-system]
requires = ["npm"]
build-backend = "flit_core.buildapi"

[project]
name = "tool_server"
authors = [{name = "brazafonso", email = "a93178@uminho.pt"},{name = "Tiago Silva", email = "a93277@uminho.pt"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = []
readme = "readme.md"


[project.scripts]
ts = "tool_server:tool_server"

