[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tokenizerspln"
authors = [{name = "brazafonso", email = "a93178@uminho.pt"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["spacy"]
readme = "readme.md"

[project.scripts]
tok = "tokenizerspln:tokenizer"